code clean up and fixtures for product,category

--- a/templates/catalog/category.html
+++ b/templates/catalog/category.html
@@ -1,17 +1,18 @@
 {% extends "catalog.html" %}
 {% block content %}
 
-	<h1>{{ c.name }}</h1>
-	{{ c.description }}
+	<h1>{{ category.name }}</h1>
+	{{ category.description }}
 	<br /><br />
-	{% for p in products %}
+	
+	{% for product in products %}
 	<div class="product_thumbnail">
 		<a href="{{ p.get_absolute_url }}">
 			<img src="{{ MEDIA_URL }}images/products/thumbnails/{{ p.image}}" alt="{{ p.name }}" class="bn" />
 			<br />
-			{{ p.name }}
+			{{ product.name }}
 		</a>
 	</div>
 	{% endfor %}
-
+	
 {% endblock %}
