--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load catalog_tags %}
 {% block site_wrapper %}
 	<div id="main">
 		<a href="#content" class="skip_link">Skip to main content</a>
@@ -6,7 +7,7 @@
 		<div id="banner">
 			<div class="bannerIEPadder">
 				<div class="cart_box">
-					[link to cart here]
+					{% cart_box request %}
 				</div>
 				Modern Musician
 			</div>
@@ -23,7 +24,7 @@
 				<div class="sidebarIEPadder">
 					[search box here]
 					<br />
-					{% include "tags/category_list.html" %}
+					{% category_list request.path %}
 				</div>
 			</div>
 			<div id="content">
@@ -38,7 +39,7 @@
 		
 		<div id="footer">
 			<div class="footerIEPadder">
-				[footer here]
+				{% footer_links %}
 			</div>
 		</div>
 		
