--- a/templates/catalog/category.html
+++ b/templates/catalog/category.html
@@ -7,8 +7,8 @@
 	
 	{% for product in products %}
 	<div class="product_thumbnail">
-		<a href="{{ p.get_absolute_url }}">
-			<img src="{{ MEDIA_URL }}images/products/thumbnails/{{ p.image}}" alt="{{ p.name }}" class="bn" />
+		<a href="/product/{{product.slug}}/">
+			<img src="{{ MEDIA_URL }}images/products/thumbnails/{{ product.image}}" alt="{{ product.name }}" class="bn" />
 			<br />
 			{{ product.name }}
 		</a>
