--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -9,7 +9,7 @@
 				<div class="cart_box">
 					{% cart_box request %}
 				</div>
-				Modern Musician
+				Trucking Industry
 			</div>
 		</div>
 		
@@ -22,7 +22,7 @@
 		<div id="middle">
 			<div id="sidebar">
 				<div class="sidebarIEPadder">
-					[search box here]
+				
 					<br />
 					{% category_list request.path %}
 				</div>
