--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -1,4 +1,7 @@
 {% extends "catalog.html" %}
 {%block content %}
-	<h1>Welcome to Modern Musician!</h1>
+	<h1>Welcome to Trucking Industry!</h1>
+	<div align="center">
+	<img src="{{ MEDIA_URL }}/admin/img/home1.jpg" width="500px" height="300px"/>
+	</div>
 {% endblock %}
