--- a/templates/catalog/product.html
+++ b/templates/catalog/product.html
@@ -2,7 +2,7 @@
 {% block content %}
 	
 	<div class="product_image" >
-		<img src="{{ MEDIA_URL }}images/products/main/{{ p.image }}" alt="{{ p.name}}" />
+		<img src="{{ MEDIA_URL }}admin/img/{{ product.image }}" alt="{{ product.name}}" />
 	</div>
 	<h1>{{ product.name }}</h1>
 	Brand: <em>{{ product.brand }}</em>
