--- a/templates/catalog/category.html
+++ b/templates/catalog/category.html
@@ -8,7 +8,8 @@
 	{% for product in products %}
 	<div class="product_thumbnail">
 		<a href="/product/{{product.slug}}/">
-			<img src="{{ MEDIA_URL }}images/products/thumbnails/{{ product.image}}" alt="{{ product.name }}" class="bn" />
+			<div class="image_src"><img src="{{ MEDIA_URL }}admin/img/{{ product.image}}" alt="{{ product.name }}" class="bn" />
+			</div>
 			<br />
 			{{ product.name }}
 		</a>
