--- a/ecomstore/media/admin/css/css.css
+++ b/ecomstore/media/admin/css/css.css
@@ -218,6 +218,14 @@ fieldset.my_account ul li{
 margin-bottom:5px;
 }
 
+#add_review{
+cursor:pointer;
+}
+.hidden{display:none;}
+.visible{display:block;}
+.new_review{background-color:Pink;}
+
+
 
 
 
