--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@ xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
 <link rel="stylesheet" href="/media/admin/css/css.css" />
-
+<script src="/media/admin/js/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="/media/admin/js/custom_script.js" type="text/javascript"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>
 		{% block title %}
