--- a/ecomstore/media/admin/css/css.css
+++ b/ecomstore/media/admin/css/css.css
@@ -225,6 +225,24 @@ cursor:pointer;
 .visible{display:block;}
 .new_review{background-color:Pink;}
 
+#tags a{
+color:DarkOrange;
+}
+
+#noscript{
+position:fixed;
+top:0;left:0;
+width:100%;
+background-color:Red;
+color:White;
+font-weight:bold;
+padding:5px;
+text-align:center;
+}
+#noscript_padder{
+height:30px;
+}
+
 
 
 
